test/conformance/chainsaw/validate/clusterpolicy/standard/cel/http-cel/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: http-cel-test
spec:
  containers:
  - name: test-container
    image: nginx:latest
    ports:
    - containerPort: 80
