test/conformance/chainsaw/validate/clusterpolicy/standard/cel/http-cel/assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-server
  namespace: http-cel-test
spec:
  selector:
    matchLabels:
      app: test-server
status:
  availableReplicas: 1
  readyReplicas: 1
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: test-server
  namespace: http-cel-test
